--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,8 @@
              <select class="currency-select">
                 <option value="dolar">US$ Dólar Americano</option>
                 <option value="euro">€ Euro</option>
+                <option value="libra">£ Libra</option>
+                <option value="bitcoin">Bitcoin</option>
             </select>
          </label>
 
@@ -44,7 +46,7 @@
 
          
             <div class="currency-box">
-                <img class="currency-img" src="./Assets/Dolar.png" alt="logo-moeda-a-convertida">
+                <img class="currency-img" src="./Assets/Dolar.png" alt="logo-moeda-convertida">
                 <p class="currency" id="currency-name">Dólar Americano</p>
                 <p class="currency-value">US$ 0.0</p>
             </div>
